Remove custom executors, throw if OSGi methods are not implemented